cabal-version:      3.8
name:               h-raylib-examples
version:            0.1.0.0
synopsis:           offical raylib examples in h-raylib
description:        
  [WIP] offical raylib examples in h-raylib
license:            MIT
license-file:       LICENSE
author:             futu2
maintainer:         futu2
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type:             git
  location:         git://github.com/futu2/h-raylib-examples

common warnings
    ghc-options: -Wall -Wno-missing-home-modules -Wno-type-defaults

executable core
    import:           warnings
    main-is:          Main.hs
    build-depends:
      , base >= 4.9 && < 5
      , h-raylib >= 4.6.0.6 && < 5
      , random >= 1.2.0  && < 2
    hs-source-dirs:   src
    default-language: GHC2021
